--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -939,7 +939,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 @misc{haskell_data_text,
   title = {Data.Text},
   author = {Bryan O'Sullivan},
-  howpublished = {\url{https://hackage.haskell.org/package/text-1.2.2.1/docs/Data-Text.html}},
+  howpublished = {\url{https://hackage.haskell.org/package/text/docs/Data-Text.html}},
   note = {Accessed: 2017-04-15},
   year = 2017
 }
@@ -955,7 +955,31 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 @misc{data_map,
   title = {Data.Map},
   author = {Daan Leijen, Andriy Palamarchuk},
-  howpublished = {\url{https://hackage.haskell.org/package/containers-0.5.10.2/docs/Data-Map-Lazy.html}},
+  howpublished = {\url{https://hackage.haskell.org/package/containers/docs/Data-Map-Lazy.html}},
   note = {Accessed: 2017-04-17},
+  year = 2017
+}
+
+@misc{hunit,
+  title = {HUnit: A Unit Testing Framework},
+  author = {Dean Herington, Simon Hengel},
+  howpublished = {\url{https://hackage.haskell.org/package/HUnit}},
+  note = {Accessed: 2017-04-18},
+  year = 2017
+}
+
+@misc{quick_check,
+  title = {QuickCheck: Automatic Testing of Haskell Programs},
+  author = {Koen Claessen, Björn Bringert, Nick Smallbone},
+  howpublished = {\url{https://hackage.haskell.org/package/QuickCheck}},
+  note = {Accessed: 2017-04-18},
+  year = 2017
+}
+
+@misc{tasty_haskell,
+  title = {tasty: Modern and Extensible Testing Framework},
+  author = {Roman Cheplyaka},
+  howpublished = {\url{https://hackage.haskell.org/package/tasty}},
+  note = {Accessed: 2017-04-18},
   year = 2017
 }
