--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -186,3 +186,19 @@
 \newacronym{ghci}{GHCi}{GHC Interpreter}
 
 \newacronym{api}{API}{Application Programming Interface}
+
+\newglossaryentry{dependent_typing}{
+    name=Dependent Typing,
+    description={
+        The ability to encode expressions in the type system that are predicated on values.
+        This allows the type system to encode pre- and post-conditions for functions in a dependently-typed language. 
+    }
+}
+
+\newglossaryentry{dependently_typed}{
+    name=Dependently Typed,
+    text=dependently typed,
+    description={
+        See \gls{dependent_typing}.
+    }
+}
