--- a/doc/dissertation/resources/absol_test_file.tex
+++ b/doc/dissertation/resources/absol_test_file.tex
@@ -1,3 +1,10 @@
+\chapter{The ABSOL Testing File} % (fold)
+\label{cha:the_absol_testing_file}
+This appendix contains the test file used to check the functionality of the metacompiler both during and after its development. 
+The file is contained in the following listing and defines a toy language that doesn't do anything useful.
+Its main intention is to test the parsing functionality of \gls{absol}, as well as the semantic verification facilities. 
+
+\begin{minted}[fontsize=\blockfont]{text}
 // Language metadata
 name : simple_test;
 
@@ -61,8 +68,6 @@ language : {
         number n : {n = n1 * n1}(n2 == 2) :
             {number n1 <= <arith-expr>[0]}, {number n2 <= <arith-expr>[1]} |
         number n : {n = n1 ^ n2}() :
-            {number n1 <= <arith-expr>[0]}, {number n2 <= <arith-expr>[1]} |
-        number n : {n = n1 ^ n3, n3 = n3 * 0 + n2}() :
             {number n1 <= <arith-expr>[0]}, {number n2 <= <arith-expr>[1]}
     };
 
@@ -81,3 +86,7 @@ language : {
 };
 
 };
+
+\end{minted}
+
+% chapter the_absol_testing_file (end)
